--- a/src/css/style.css
+++ b/src/css/style.css
@@ -218,7 +218,7 @@ nav {
     display: none;
 }
 
-.nav-section {
+#nav-section {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -923,6 +923,10 @@ box-shadow:  0 0 15px #929292,
         background-color: var(--bg-color);
     }
 
+    main {
+        padding: 0;
+    }
+
     #profile-image {
         display: none;
     }
@@ -997,10 +1001,11 @@ box-shadow:  0 0 15px #929292,
         margin: 0 0.5rem;
     }
     
-    .nav-section {
+    #nav-section {
         height: 75px;
         width: 100%;
         justify-content: center;
+        align-items: center;
     }
 
     .nav-link {
@@ -1008,7 +1013,7 @@ box-shadow:  0 0 15px #929292,
         margin: 0 0.5rem;
     }
     
-    .brand-name-hide {
+    .brand-name {
         display: none;
     }
     
@@ -1019,40 +1024,17 @@ box-shadow:  0 0 15px #929292,
         font-size: 0.8rem;
     }
 
-    .nav-section-menu {
-        height: 40%;
-        width: 100%;
-    }
 
     #nav-links {
-        flex-direction: column;
-        align-items: flex-end;
+        flex-direction: row;
+        align-items: center;
         justify-content: center;
-        margin-top: 120px;
+        /* margin-top: 120px; */
         font-size: 2rem;
-        background-color: #bebebe;
+        /* background-color: #bebebe; */
         width: 100%;
         border-radius: 20px;
-        padding-right: 1rem;
-    }
-
-    .nav-link {
-        float: right;
-        flex-direction: column;
-        font-size: 2rem;
-        margin: 10px 0;
-    }
-
-    .fa-bars {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        position: absolute;
-        cursor: pointer;
-        top: 1rem;
-        right: 2rem;
-        height: fit-content;
-        font-size: 2rem;
+        /* padding-right: 1rem; */
     }
 
     /* ABOUT SECTION  */
@@ -1060,6 +1042,7 @@ box-shadow:  0 0 15px #929292,
         margin: 1rem;
         padding: 0.5rem;
         height: auto;
+        width: 100%;
     }
 
     #about-me {
