--- a/src/css/style.css
+++ b/src/css/style.css
@@ -25,7 +25,7 @@ body {
 
 main {
     box-sizing: border-box;
-    padding: 0;
+    padding: 0 2rem;
     width: 100%;
     /* height: auto; */
     align-items: center;
@@ -924,11 +924,11 @@ box-shadow:  0 0 15px #929292,
         background-color: var(--bg-color);
     }
 
-    main {
+    /* main {
         padding: 0;
         width: 100%;
         margin: 0;
-    }
+    } */
 
     #profile-image {
         display: none;
@@ -1057,12 +1057,14 @@ box-shadow:  0 0 15px #929292,
     }
 
     .about-info {
-        height: 120px;
+        height: 150px;
         margin: 0.4rem 0;
+        width: 120%;
     }
 
     .about-image {
         margin: 0 0.2rem;
+        height: 100%;
         width: 5rem;
     }
 
