--- a/src/css/style.css
+++ b/src/css/style.css
@@ -104,7 +104,7 @@ main {
     }
 
     to {
-        width: 33.3rem;
+        width: 17rem;
     }
 }
 
@@ -342,6 +342,18 @@ nav {
 #about-header h1{
     font-size: 45px;
     letter-spacing: 2.5px;
+    margin: 0.5rem;
+}
+
+#job {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#job h2, #job h3 {
+    margin: 0;
+    padding: 0;
 }
 
 #about-footer {
